# Poker-Hand-Evaluator

./: .gitignore
Elixir/: Poker.ex  poker_tester.exs  results-Tran Lim.txt  simple_tester_elixir.exs
Haskell/: Poker.hs  TestPoker.hs  haskell_poker_tester.hs  tester.hs
Rust/poker/: Cargo.toml
Rust/poker/src/: Poker.rs  simple_tester_rust.rs  tester.rs
SmallTalk/: deal  duplicateCheck  evaluateHand  flushCheck  fourOfAKindCheck  fullHouseCheck  getHighestCard  getSuit  kicker  ready  results32-Tran Lim Feb 10, 2021 1245 AM.txt  royalFlushCheck  simple_tester_smalltalk1.st  straightCheck  straightFlushCheck  twoPairCheck
