[package]
name = "poker"
version = "0.1.0"
authors = ["AlecFaye <kelvintran.lim@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "simple_tester_rust"
path = "src/simple_tester_rust.rs"

[dependencies]
to_vec = "0.1.0"
